fix navbar behind issue

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -63,7 +63,7 @@ html {
     background-color: #000000;
     width: 0%;
     content: "";
-    height: 4px;
+    height: 2px;
     transition: all 0.5s;
   }
   
